###############################################################################
##
## CMakeLists file for unit test
##
###############################################################################


######################################################################################
### 1) Include the sources
######################################################################################

######################################################################################


######################################################################################
### 2) Specify where CMake can find the libraries
######################################################################################

######################################################################################


######################################################################################
### 3) Define your targets and link the librairies
######################################################################################

SET(SOURCES
  )

FOREACH(current ${SOURCES})
  ADD_EXECUTABLE(${current} ${current}.cpp)
  TARGET_LINK_LIBRARIES(${current} ${PROJECT_NAME} ${EO_LIBRARIES})
  ADD_CURRENT(${current} ${current})
ENDFOREACH()

######################################################################################
