PROJECT(cma_sa)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(RESOURCES
  cma_sa.param
  plot.py
  )

FOREACH(file ${RESOURCES})
  EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_SOURCE_DIR}/${file}
    ${DO_BINARY_DIR}/${file}
    )
ENDFOREACH(file)

FILE(GLOB SOURCES *.cpp)

SET(EXECUTABLE_OUTPUT_PATH ${DO_BINARY_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} do ${EO_LIBRARIES} ${MO_LIBRARIES})
