###############################################################################
##
## Makefile.am for app dir in eo
##
###############################################################################

SUBDIRS = gprop mastermind

###############################################################################

all:
	for i in $(SUBDIRS); do pushd $$i && $(MAKE) all; popd; done

clean:
	for i in $(SUBDIRS); do pushd $$i && $(MAKE) clean; popd; done

###############################################################################
