###############################################################################
##
## Makefile.am for app dir in eo
##
###############################################################################

SUBDIRS = mastermind gpsymreg gprop

###############################################################################

all:
	for i in $(SUBDIRS); do cd $$i && $(MAKE) all; cd ..; done

clean:
	for i in $(SUBDIRS); do cd $$i && $(MAKE) clean; cd ..; done

###############################################################################
