###############################################################################
##
## Makefile.am for eo/src
##
###############################################################################

SUBDIRS = 

lib_LIBRARIES = 
libeo_a_SOURCES =

libeoincdir = $(includedir)/eo
libeoinc_HEADERS=eoAged.h eoDraw.h
