###############################################################################
##
## Makefile.am for eo/doc
##
###############################################################################

###############################################################################

EXTRA_DIST = eo.cfg foot.html html/* latex/*

doc:	eo.cfg
	doxygen eo.cfg

clean:
	rm -rf html latex man
